--- a/Apu's Animal Park/AnimalPark.csproj
+++ b/Apu's Animal Park/AnimalPark.csproj
@@ -49,6 +49,11 @@
     <Compile Include="AnimalGen\Animal.cs" />
     <Compile Include="AnimalGen\AnimalManager.cs" />
     <Compile Include="AnimalGen\CategoryType.cs" />
+    <Compile Include="AnimalGen\EaterType.cs" />
+    <Compile Include="AnimalGen\FoodSchedule.cs" />
+    <Compile Include="AnimalGen\IAnimal.cs" />
+    <Compile Include="AnimalGen\IComparable.cs" />
+    <Compile Include="AnimalGen\IFood.cs" />
     <Compile Include="Birds\Bird.cs" />
     <Compile Include="Birds\BirdsSpecies.cs" />
     <Compile Include="Birds\Dove.cs" />
